# rss-reader

./: Cargo.toml  README.md  flake.nix  shell.nix
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-6-link  flake-profile-7-link  flake-profile-8-link
src/: config.rs  main.rs
src/domain/: feed.rs  item.rs
src/services/: aggregator.rs  extract.rs  fetch.rs  mod.rs
src/sources/: mod.rs  rss.rs  source.rs
src/ui/: layout.rs  mod.rs  ui.rs
src/ui/components/: detail.rs  header.rs  main.rs  mod.rs  sidebar.rs  statusbar.rs
