[package]
name = "rss-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
rss = "2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
anyhow = "1"
futures = "0.3"
ratatui = "0.26"
crossterm = "0.27"
