[package]
name = "rss-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rss = "2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
anyhow = "1"
futures = "0.3"
ratatui = "0.26"
crossterm = "0.27"
open = "5"
atom_syndication = "0.12"
scraper = "0.20"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
html2text = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
